
option(WITH_WORKER_DEBUG "For debug, worker process has not generate bug run on the same process of main." OFF)
option(WITH_WEBRTC_DEBUG "For debug, subprocess of WebRTC has not generate but run on the same process of main." OFF)

find_package(PkgConfig)

# WebRTC
include_directories(${WEBRTC_INCLUDE_DIRS})
if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  link_directories(${WEBRTC_LIBRARY_DIRS})
  list(APPEND webrtc_libs "jingle_peerconnection")
  list(APPEND webrtc_libs "field_trial_default")
  list(APPEND webrtc_libs "jsoncpp")
  list(APPEND webrtc_libs "rtc_media")
  list(APPEND webrtc_libs "rtc_base_approved")
  list(APPEND webrtc_libs "webrtc_common")
  list(APPEND webrtc_libs "webrtc")
  list(APPEND webrtc_libs "system_wrappers")
  list(APPEND webrtc_libs "voice_engine")
  list(APPEND webrtc_libs "common_audio")
  list(APPEND webrtc_libs "openmax_dl")
  list(APPEND webrtc_libs "common_audio_sse2")
  list(APPEND webrtc_libs "audio_coding_module")
  list(APPEND webrtc_libs "cng")
  list(APPEND webrtc_libs "audio_encoder_interface")
  list(APPEND webrtc_libs "g711")
  list(APPEND webrtc_libs "pcm16b")
  list(APPEND webrtc_libs "ilbc")
  list(APPEND webrtc_libs "webrtc_opus")
  list(APPEND webrtc_libs "opus")
  list(APPEND webrtc_libs "g722")
  list(APPEND webrtc_libs "isac")
  list(APPEND webrtc_libs "audio_decoder_interface")
  list(APPEND webrtc_libs "isac_common")
  list(APPEND webrtc_libs "red")
  list(APPEND webrtc_libs "rtc_event_log")
  list(APPEND webrtc_libs "rtc_event_log_proto")
  list(APPEND webrtc_libs "protobuf_lite")
  list(APPEND webrtc_libs "neteq")
  list(APPEND webrtc_libs "builtin_audio_decoder_factory")
  list(APPEND webrtc_libs "audio_decoder_factory_interface")
  list(APPEND webrtc_libs "rent_a_codec")
  list(APPEND webrtc_libs "audio_conference_mixer")
  list(APPEND webrtc_libs "audio_processing")
  list(APPEND webrtc_libs "audioproc_debug_proto")
  list(APPEND webrtc_libs "audio_processing_sse2")
  list(APPEND webrtc_libs "webrtc_utility")
  list(APPEND webrtc_libs "media_file")
  list(APPEND webrtc_libs "audio_device")
  list(APPEND webrtc_libs "bitrate_controller")
  list(APPEND webrtc_libs "paced_sender")
  list(APPEND webrtc_libs "rtp_rtcp")
  list(APPEND webrtc_libs "remote_bitrate_estimator")
  list(APPEND webrtc_libs "congestion_controller")
  list(APPEND webrtc_libs "common_video")
  list(APPEND webrtc_libs "yuv")
  list(APPEND webrtc_libs "jpeg_turbo")
  list(APPEND webrtc_libs "video_capture_module")
  list(APPEND webrtc_libs "video_processing")
  list(APPEND webrtc_libs "video_processing_sse2")
  list(APPEND webrtc_libs "webrtc_video_coding")
  list(APPEND webrtc_libs "webrtc_h264")
  list(APPEND webrtc_libs "webrtc_i420")
  list(APPEND webrtc_libs "video_coding_utility")
  list(APPEND webrtc_libs "webrtc_vp8")
  list(APPEND webrtc_libs "vpx")
  list(APPEND webrtc_libs "vpx_intrinsics_mmx")
  list(APPEND webrtc_libs "vpx_intrinsics_sse2")
  list(APPEND webrtc_libs "vpx_intrinsics_ssse3")
  list(APPEND webrtc_libs "vpx_intrinsics_sse4_1")
  list(APPEND webrtc_libs "vpx_intrinsics_avx")
  list(APPEND webrtc_libs "vpx_intrinsics_avx2")
  list(APPEND webrtc_libs "webrtc_vp9")
  list(APPEND webrtc_libs "metrics_default")
  list(APPEND webrtc_libs "rtc_xmllite")
  list(APPEND webrtc_libs "rtc_base")
  list(APPEND webrtc_libs "boringssl")
  list(APPEND webrtc_libs "boringssl_asm")
  list(APPEND webrtc_libs "rtc_xmpp")
  list(APPEND webrtc_libs "rtc_p2p")
  list(APPEND webrtc_libs "usrsctplib")
  list(APPEND webrtc_libs "video_capture_module_internal_impl")
  list(APPEND webrtc_libs "rtc_pc")
  list(APPEND webrtc_libs "srtp")

  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWEBRTC_MAC=1 -DWEBRTC_POSIX=1")
  find_library(CORE_FOUNDATION CoreFoundation)
  list(APPEND webrtc_libs ${CORE_FOUNDATION})
  find_library(FOUNDATION Foundation)
  list(APPEND webrtc_libs ${FOUNDATION})
  find_library(CORE_AUDIO CoreAudio)
  list(APPEND webrtc_libs ${CORE_AUDIO})
  find_library(AUDIO_TOOLBOX AudioToolbox)
  list(APPEND webrtc_libs ${AUDIO_TOOLBOX})
  find_library(CORE_GRAPHICS CoreGraphics)
  list(APPEND webrtc_libs ${CORE_GRAPHICS})

elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux" AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^arm")
  # Linux(arm)
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/api/libjingle_peerconnection.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libfield_trial_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libmetrics_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/jsoncpp/libjsoncpp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/media/librtc_media.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base_approved.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libsystem_wrappers.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libcpu_features_linux.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/voice_engine/libvoice_engine.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl_armv7.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_coding_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcng.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_encoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg711.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpcm16b.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libilbc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_opus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/opus/libopus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg722.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_fix.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libred.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/protobuf/libprotobuf_lite.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libneteq.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbuiltin_audio_decoder_factory.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_factory_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librent_a_codec.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_conference_mixer.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudioproc_debug_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libmedia_file.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_task_queue.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/base/third_party/libevent/libevent.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_device.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbitrate_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpaced_sender.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librtp_rtcp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_video/libcommon_video.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/libyuv.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libjpeg_turbo/libjpeg_turbo.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libremote_bitrate_estimator.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcongestion_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_video_coding.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_h264.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_i420.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/utility/libvideo_coding_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp8/libwebrtc_vp8.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp9/libwebrtc_vp9.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/p2p/librtc_p2p.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl_asm.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/usrsctp/libusrsctplib.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module_internal_impl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/pc/librtc_pc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libsrtp/libsrtp.a")

  ##
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/api/libjingle_peerconnection.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libfield_trial_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libmetrics_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/jsoncpp/libjsoncpp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/media/librtc_media.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base_approved.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libsystem_wrappers.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libcpu_features_linux.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/voice_engine/libvoice_engine.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl_armv7.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_coding_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcng.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_encoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg711.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpcm16b.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libilbc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_opus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/opus/libopus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg722.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_fix.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libred.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/protobuf/libprotobuf_lite.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libneteq.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbuiltin_audio_decoder_factory.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_factory_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librent_a_codec.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_conference_mixer.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudioproc_debug_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libmedia_file.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_task_queue.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/base/third_party/libevent/libevent.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_device.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbitrate_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpaced_sender.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librtp_rtcp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_video/libcommon_video.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/libyuv.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libjpeg_turbo/libjpeg_turbo.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libremote_bitrate_estimator.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcongestion_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing_neon.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_video_coding.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_h264.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_i420.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/utility/libvideo_coding_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp8/libwebrtc_vp8.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp9/libwebrtc_vp9.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/p2p/librtc_p2p.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl_asm.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/usrsctp/libusrsctplib.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module_internal_impl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/pc/librtc_pc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libsrtp/libsrtp.a")

  ##
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_fix.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio.a")

  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWEBRTC_LINUX=1 -DWEBRTC_POSIX=1")
  pkg_search_module(GDK REQUIRED gdk-x11-2.0)
  list(APPEND webrtc_libs ${GDK_LIBRARIES})
  pkg_search_module(GTHREAD REQUIRED gthread-2.0)
  list(APPEND webrtc_libs ${GTHREAD_LIBRARIES})
  pkg_search_module(GTK REQUIRED gtk+-2.0)
  list(APPEND webrtc_libs ${GTK_LIBRARIES})
  pkg_search_module(X11 REQUIRED x11)
  list(APPEND webrtc_libs ${X11_LIBRARIES})

elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  # Linux(x86, amd64)
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/api/libjingle_peerconnection.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libfield_trial_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libmetrics_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/jsoncpp/libjsoncpp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/media/librtc_media.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base_approved.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libsystem_wrappers.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libcpu_features_linux.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/voice_engine/libvoice_engine.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_coding_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcng.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_encoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg711.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpcm16b.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libilbc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_opus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/opus/libopus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg722.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libred.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/protobuf/libprotobuf_lite.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libneteq.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbuiltin_audio_decoder_factory.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_factory_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librent_a_codec.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_conference_mixer.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudioproc_debug_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libmedia_file.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_task_queue.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/base/third_party/libevent/libevent.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_device.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbitrate_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpaced_sender.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librtp_rtcp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_video/libcommon_video.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/libyuv.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libjpeg_turbo/libjpeg_turbo.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libremote_bitrate_estimator.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcongestion_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_video_coding.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_h264.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_i420.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/utility/libvideo_coding_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp8/libwebrtc_vp8.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_mmx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_ssse3.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_sse4_1.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_avx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_avx2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp9/libwebrtc_vp9.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/p2p/librtc_p2p.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl_asm.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/usrsctp/libusrsctplib.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module_internal_impl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/pc/librtc_pc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libsrtp/libsrtp.a")

  ##
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/api/libjingle_peerconnection.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libfield_trial_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libmetrics_default.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/jsoncpp/libjsoncpp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/media/librtc_media.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base_approved.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/libwebrtc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libsystem_wrappers.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/system_wrappers/libcpu_features_linux.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/voice_engine/libvoice_engine.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/openmax_dl/dl/libopenmax_dl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_coding_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcng.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_encoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg711.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpcm16b.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libilbc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_opus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/opus/libopus.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libg722.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libisac_common.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libred.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/librtc_event_log_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/protobuf/libprotobuf_lite.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libneteq.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbuiltin_audio_decoder_factory.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_decoder_factory_interface.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librent_a_codec.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_conference_mixer.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudioproc_debug_proto.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_processing_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libmedia_file.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_task_queue.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/base/third_party/libevent/libevent.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libaudio_device.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libbitrate_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libpaced_sender.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/librtp_rtcp.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_video/libcommon_video.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/libyuv.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libjpeg_turbo/libjpeg_turbo.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libremote_bitrate_estimator.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libcongestion_controller.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_processing_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_video_coding.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_h264.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libwebrtc_i420.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/utility/libvideo_coding_utility.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp8/libwebrtc_vp8.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_mmx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_sse2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_ssse3.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_sse4_1.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_avx.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libvpx/libvpx_intrinsics_avx2.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/video_coding/codecs/vp9/libwebrtc_vp9.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/p2p/librtc_p2p.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/base/librtc_base.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/boringssl/libboringssl_asm.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/usrsctp/libusrsctplib.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/modules/libvideo_capture_module_internal_impl.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/pc/librtc_pc.a")
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/chromium/src/third_party/libsrtp/libsrtp.a")

  ##
  list(APPEND webrtc_libs "${WEBRTC_OUT_DIR}/obj/webrtc/common_audio/libcommon_audio.a")

  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWEBRTC_LINUX=1 -DWEBRTC_POSIX=1")
  pkg_search_module(GDK REQUIRED gdk-x11-2.0)
  list(APPEND webrtc_libs ${GDK_LIBRARIES})
  pkg_search_module(GTHREAD REQUIRED gthread-2.0)
  list(APPEND webrtc_libs ${GTHREAD_LIBRARIES})
  pkg_search_module(GTK REQUIRED gtk+-2.0)
  list(APPEND webrtc_libs ${GTK_LIBRARIES})
  pkg_search_module(X11 REQUIRED x11)
  list(APPEND webrtc_libs ${X11_LIBRARIES})
endif()

# Boost
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  set(Boost_USE_STATIC_LIBS ON)
  set(Boost_USE_MULTITHREADED ON)
  set(Boost_USE_STATIC_RUNTIME OFF)
endif()
find_package(Boost REQUIRED COMPONENTS system date_time random)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
list(APPEND extra_libs ${Boost_LIBRARIES})

# libffi
pkg_search_module(FFI libffi)
if(FFI_FOUND)
  include_directories(${FFI_INCLUDE_DIRS})
  string(REPLACE ";" " " FFI_CFLAGS_STR "${FFI_CFLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FFI_CFLAGS_STR}")
  list(APPEND extra_libs ${FFI_LIBRARIES})
else()
  find_library(FFI_LIBRARY NAMES ffi)
  list(APPEND extra_libs ${FFI_LIBRARY})
endif()

# OpenSSL
find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
list(APPEND ssl_libs ${OPENSSL_LIBRARIES})

# libuv
pkg_search_module(UV libuv)
if(UV_FOUND)
  include_directories(${UV_INCLUDE_DIRS})
  string(REPLACE ";" " " UV_CFLAGS_STR "${UV_CFLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${UV_CFLAGS_STR}")
  list(APPEND extra_libs ${UV_LIBRARIES})
else()
  include_directories(${UV_INCLUDE_DIRS})
  list(APPEND extra_libs ${UV_LIBRARIES})
endif()

# RE2
if(WITH_RE2)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_RE2=1")
  include_directories(${PROJECT_SOURCE_DIR}/lib/re2)
  link_directories(${PROJECT_SOURCE_DIR}/tmp/re2/src/RE2-build)
  list(APPEND extra_libs re2)
endif()

# C++ options
list(APPEND extra_libs "crypto")
list(APPEND extra_libs "dl")
list(APPEND extra_libs "ssl")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wno-unused-parameter")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  # MaxOSX

elseif(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
  # FreeBSD
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWEBRTC_POSIX=1")

elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  # Linux
  list(APPEND extra_libs "pthread")

elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  # Windows
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWEBRTC_WIN=1")
endif()

if(WITH_WEBRTC_DEBUG)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_WEBRTC_DEBUG=1")
endif()

if(WITH_WORKER_DEBUG)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_WORKER_DEBUG=1")
endif()

# Compile & link
file(GLOB HEADER_FILES "*.hpp")

list(APPEND WEBRTC_FILES "routing.cpp")
list(APPEND WEBRTC_FILES "subprocess.cpp")
list(APPEND WEBRTC_FILES "webrtc_bundle.cpp")
list(APPEND WEBRTC_FILES "webrtc_subprocess.cpp")
list(APPEND WEBRTC_FILES "webrtc_edge.cpp")

list(APPEND WORKER_FILES "subprocess.cpp")
list(APPEND WORKER_FILES "worker_subprocess.cpp")

list(APPEND MAIN_FILES "connector.cpp")
list(APPEND MAIN_FILES "daemon.cpp")
list(APPEND MAIN_FILES "frontend_connector.cpp")
list(APPEND MAIN_FILES "router.cpp")
list(APPEND MAIN_FILES "server_connector.cpp")
list(APPEND MAIN_FILES "webrtc_connector.cpp")
list(APPEND MAIN_FILES "worker_connector.cpp")

if(WITH_WEBRTC_DEBUG)
  list(APPEND MAIN_FILES "${WEBRTC_FILES}")
  list(APPEND extra_libs "${webrtc_libs}")
endif()

if(WITH_WORKER_DEBUG)
  list(APPEND MAIN_FILES "${WORKER_FILES}")
endif()

# Compile webrtc_subprocess
if(NOT WITH_WEBRTC_DEBUG)
  add_executable(webrtc_subprocess
    ${HEADER_FILES}
    ${WEBRTC_FILES}
    )
  add_dependencies(webrtc_subprocess
    const_processwarp
    const_core_constant
    )
  target_link_libraries(webrtc_subprocess
    pwcore
    ${webrtc_libs}
    ${extra_libs}
    )
endif(NOT WITH_WEBRTC_DEBUG)

# Compile worker_subprocess
if(NOT WITH_WORKER_DEBUG)
  add_executable(worker_subprocess
    ${HEADER_FILES}
    ${WORKER_FILES}
    )
  add_dependencies(worker_subprocess
    const_processwarp
    const_core_constant
    )
  target_link_libraries(worker_subprocess
    pwcore
    ${extra_libs}
    )
endif(NOT WITH_WORKER_DEBUG)

# Compile processwarp
add_executable(processwarp
  ${HEADER_FILES}
  ${MAIN_FILES}
  )
add_dependencies(processwarp
  const_processwarp
  const_core_constant
  )
target_link_libraries(processwarp
  pwcore
  ${extra_libs}
  ${ssl_libs}
  sioclient_tls
  )

# Install
if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
  install(TARGETS processwarp DESTINATION ${PROJECT_SOURCE_DIR}/bin)

  if(NOT WITH_WEBRTC_DEBUG)
    install(TARGETS webrtc_subprocess DESTINATION ${PROJECT_SOURCE_DIR}/bin)
  endif(NOT WITH_WEBRTC_DEBUG)

  if(NOT WITH_WORKER_DEBUG)
    install(TARGETS worker_subprocess DESTINATION ${PROJECT_SOURCE_DIR}/bin)
  endif(NOT WITH_WORKER_DEBUG)
endif()

